Fixed unwanted shadow behind .project-container
Removed drop-shadow (filter) from CSS.
It caused a dark shadow behind the container borders.

--- a/styles/main-content.css
+++ b/styles/main-content.css
@@ -354,7 +354,6 @@
     width: 550px;
     background-color: #362354;
     border-radius: 35px;
-    box-shadow: 0 0 50px 5px rgba(7, 7, 7, 0.55);
     opacity: 82%;
     z-index: 3;
     transition: 0.5s;
@@ -723,4 +722,5 @@ hr.rounded {
 
 window.scrollTo {
     top: 500;
+
 }
